syntax = "proto3";
package gossip;

import "gogoproto/gogo.proto";
import "BFT/proto/crypto/keys.proto";

message NetAddress {
  string id = 1 [(gogoproto.customname) = "ID"];
  string ip = 2 [(gogoproto.customname) = "IP"];
  uint32 port = 3;
}

message NodeInfo {
  string               node_id = 1 [(gogoproto.customname) = "NodeID"];
  string               listen_addr = 2;
  string               network = 3;
  bytes                channels = 4;
  crypto.PublicKey     pubKey = 5 [(gogoproto.nullable) = false];
}

// 命令：protoc --gogofaster_out=. -I=. -I=$GOPATH/src/github.com -I=$GOPATH/src gossip.proto